# icarus_pi

./: .gitignore  README.md  frames.gv
docs/: Mecanum Wheel README.md
docs/Electrical/: Electrical README.md
docs/Mechanical/: Battery Holder V2.STL  Buck Converter Holder.STL  Camera Mount.STL  L298N Holder.stl  Level 1.STL  Level Support.STL  Mechanical README.md  Nano Holder.STL  Switch Jig-Box.STL  Switch-Jig top.STL  nikodembartnik-1-raspberry_pi_holder_3.STL  nikodembartnik-48-rplidar_holder.STL  upper levels.STL
install/: local_setup.sh  setup.sh
install/diff_interface/share/diff_interface/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/diff_interface/share/diff_interface/cmake/: ament_cmake_export_libraries-extras.cmake
install/my_bot/share/my_bot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_bot/share/my_bot/cmake/: my_botConfig-version.cmake  my_botConfig.cmake
install/my_bot/share/my_bot/config/: empty.yaml  gaz_ros2_ctl_use_sim.yaml  gazebo_params.yaml  joystick.yaml  mux.yaml  my_controllers.yaml  view_bot.rviz
install/my_bot/share/my_bot/description/: gazebo_control.xacro  inertial_macros.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  robot_dimensions.xacro  robot_hw_consts.xacro  ros2_control.xacro
install/my_bot/share/my_bot/environment/: ament_prefix_path.dsv  path.dsv
install/my_bot/share/my_bot/launch/: joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  rsp.launch.py
install/my_bot/share/my_bot/worlds/: empty.world  obstacles.world
log/: latest_build  latest_list
src/diff_interface/: CMakeLists.txt  robot_hardware.xml
src/diff_interface/include/diff_interface/: config.h  diffdrive_MyBot.h  motor_control.h  rotary_encoder.h  wheel.h
src/diff_interface/launch/: test_robot.launch.py
src/diff_interface/src/: diffdrive_MyBot.cpp  motor_control.cpp  rotary_encoder.cpp  wheel.cpp
src/icarus_interface/: CMakeLists.txt  package.xml  robot_hardware.xml
src/icarus_interface/controllers/: robot_controller_example.yaml
src/icarus_interface/include/icarus_interface/: .config_rasp_pi.h.swp  Icarus_HW_Interface.h  config.h  config_rasp_pi.h  encoder_control.h  motor_control.h  wheel.h
src/icarus_interface/launch/: test_robot.launch.py
src/icarus_interface/src/: .Icarus_HW_Interface.cpp.swp  .encoder_control.cpp.swp  Icarus_HW_Interface.cpp  encoder_control.cpp  motor_control.cpp  rotary_encoder.cpp  wheel.cpp
src/icarus_pi/: CMakeLists.txt  README.md  package.xml
src/icarus_pi/Mesh/Mecanum-8J-Right/config/: joint_names_Mecanum-8J-Right.yaml
src/icarus_pi/Mesh/Mecanum-8J-Right/meshes/: Mecanum_roller_link_1.STL  Mecanum_roller_link_2.STL  Mecanum_roller_link_3.STL  Mecanum_roller_link_4.STL  Mecanum_roller_link_5.STL  Mecanum_roller_link_6.STL  Mecanum_roller_link_7.STL  Mecanum_roller_link_8.STL  base_link.STL
src/icarus_pi/Mesh/Mecanum-8J-Right/urdf/: Mecanum-8J-Right.csv  Mecanum-8J-Right.urdf
src/icarus_pi/Mesh/Mecanum-Left/config/: joint_names_Mecanum-Left.yaml
src/icarus_pi/Mesh/Mecanum-Left/meshes/: Mecanum_roller_link_1.STL  Mecanum_roller_link_2.STL  Mecanum_roller_link_3.STL  Mecanum_roller_link_4.STL  Mecanum_roller_link_5.STL  Mecanum_roller_link_6.STL  Mecanum_roller_link_7.STL  Mecanum_roller_link_8.STL  Mecanum_roller_link_9.STL  base_link.STL
src/icarus_pi/Mesh/Mecanum-Left/urdf/: Mecanum-8J-Left.csv  Mecanum-Left.csv  Mecanum-Left.urdf  Mecanum-Left.urdf.xacro
src/icarus_pi/Mesh/Mecanum-Right/config/: joint_names_Mecanum-Right.yaml
src/icarus_pi/Mesh/Mecanum-Right/meshes/: Mecanum_Roller_Link1.STL  Mecanum_Roller_Link2.STL  Mecanum_Roller_Link3.STL  Mecanum_Roller_Link4.STL  Mecanum_Roller_Link5.STL  Mecanum_Roller_Link6.STL  Mecanum_Roller_Link7.STL  Mecanum_Roller_Link8.STL  Mecanum_Roller_Link9.STL  Right_Base_Link.STL
src/icarus_pi/Mesh/Mecanum-Right/urdf/: Mecanum-Right.csv  Mecanum-Right.urdf  Mecanum-Right.urdf.xacro
src/icarus_pi/Meshes/Mecanum - Left.URDF/launch/: display.launch  (+1 more)
src/icarus_pi/config/: controllers.yaml  joystick.yaml  mux.yaml  my_controllers.yaml  my_controllers_old.yaml
src/icarus_pi/description/: .ros2_control.xacro.swp  Mecanum-8J-Left.urdf  Mecanum-8J-Left.urdf.xacro  Mecanum-Left.urdf.xacro  Mecanum-Right.urdf.xacro  Mecanum.urdf.xacro  camera.xacro  gazebo_control.xacro  gazebo_robot_core.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  robot_dimensions.xacro  ros2_control.xacro
src/icarus_pi/launch/: joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  launch_sim_mecanum.launch.py  launch_sim_planar.launch.py  rsp.launch copy.py  rsp.launch.py  rsp.wheel.py
src/mech_drive_controller/: CMakeLists.txt  mech_drive_plugin.xml  package.xml
src/mech_drive_controller/doc/: userdoc.rst
src/mech_drive_controller/include/mech_drive_controller/: kinematics.hpp  mech_drive_controller.hpp  odometry.hpp  speed_limiter.hpp  types.hpp
src/mech_drive_controller/include_old/mech_drive_controller/: odometry.hpp  rolling_mean_accumulator.hpp  visibility_control.h
src/mech_drive_controller/src/: kinematics.cpp  mech_drive_controller.cpp  odometry.cpp  speed_limiter.cpp
src/mech_drive_controller/src_old/: mech_drive_controller.cpp  odometry.cpp
src/mech_drive_controller/test/: test_kinematics.cpp  test_odometry.cpp
src/mech_drive_controller/test/config/: test_diff_drive_controller.yaml
src/mech_drive_controller/test_old/: test_accumulator.cpp  test_common.hpp  test_load_mech_drive_controller.cpp  test_mech_drive_controller.cpp
src/my_bot/: package.xml
src/my_bot/config/: joystick.yaml  mux.yaml  my_controllers.yaml  view_bot.rviz
src/my_bot/description/: gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  robot_dimensions.xacro  robot_hw_consts.xacro  ros2_control.xacro
src/my_bot/launch/: joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  rsp.launch.py
src/pid_messages/: CMakeLists.txt  package.xml
src/pid_messages/msg/: Pid.msg
(+47 files in other folders)
